--- a/Develop/public/index.html
+++ b/Develop/public/index.html
@@ -22,6 +22,8 @@
     </div>
   </div>
   <script src="/assets/js/index.js"></script>
+      <!--   <script src="/assets/js/index-refactor.js"></script> -->
+
 </body>
 
 </html>
