--- a/Develop/public/notes.html
+++ b/Develop/public/notes.html
@@ -36,6 +36,8 @@
     </div>
   </div>
   <script src="/assets/js/index.js"></script>
+      <!--   <script src="/assets/js/index-refactor.js"></script> -->
+
 </body>
 
 </html>
